--- a/css/global.css
+++ b/css/global.css
@@ -13,8 +13,8 @@ body {
 }
 
 a {
-	color: var(--primary-color);
-	border-bottom: 1px solid var(--primary-color);
+	color: inherit;
+	border-bottom: 1px solid var(--base-color);
 	text-decoration: none;
 }
 
