--- a/css/quotes.css
+++ b/css/quotes.css
@@ -1,6 +1,6 @@
 blockquote {
     position: relative;
-    color: var(--mid-color);
+    color: var(--darkish-color);
     padding: 0 3em;
 }
 
